# fast_api

./: .gitignore  README.md  main.py  pyproject.toml
controllers/: users.py
models/: core.py  database.py  schemes.py
routers/: items.py  users.py
